# audio-pipeline

./: Cargo.toml
.github/workflows/: build-and-test.yml
crates/cli/: .env.example  Cargo.toml  config.toml
crates/cli/.sqlx/: query-12f4993af11ba9dcec9d706fc8757b86e250cb3783b827122565d22b192d54ad.json  query-134c5e9137132d71d800397047c8ae699973140f7f64aaf199256a435bf4f17b.json  query-140d4ddfa755b00763e9df3ed24348556653b8b200b380ec94132b83f144d46a.json  query-3b87ceb89a0aaf9e441cd3dbaeadc6178245f718f627cd4c02ceb74e581dd2f4.json  query-45627651b1717bdfe76f22bc79fa1cc86c4b39b1ce127ba9e0e448c0872a696c.json
crates/cli/migrations/: 20240228105351_create_youtube_videos.sql  20240229123101_create_pipelines.sql  20240229123313_create_steps.sql
crates/cli/src/: commands.rs  database.rs  main.rs  models.rs  pipeline.rs  youtube.rs
crates/cli/src/commands/: pipeline.rs  youtube.rs
crates/cli/src/pipeline/: whisper.rs  youtube.rs  yt_dlp.rs
crates/youtube/: Cargo.toml
crates/youtube/src/: lib.rs
