[package]
name = "youtube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
redact = "0.1.8"
serde = "1.0.197"
serde_json = "1.0.113"
tracing = "0.1.40"
ureq = { version = "2.9.5", features = ["json"] }
url = "2.5.0"
